--- a/index.html
+++ b/index.html
@@ -6,18 +6,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Сучасна пекарня</title>
+<link rel="stylesheet" href="./css/style.css">
 </head>
 
 <body>
     <header>
         <nav>
-            <a href="#"><img src="./images/logo.svg" alt="Логотип сучасної пекарні">
+            <a href="./index.html">
+                <img src="./images/logo.svg" alt="Логотип сучасної пекарні">
             </a>
             <ul>
-                <li><a href="#">Франшиза</a></li>
-                <li><a href="#">Наші традиції</a></li>
-                <li><a href="#">Формати</a></li>
-                <li><a href="#">Контакти</a></li>
+                <li><a href="#traditions-section">Наші традиції</a></li>
+                <li><a href="#chefs-section">Шеф-кухарі</a></li>
+                <li><a href="#formats-section">Формати</a></li>
+                <li><a href="#contact-section">Контакти</a></li>
             </ul>
         </nav>
         <button type="button">Замовити дзвінок</button>
@@ -26,7 +28,7 @@
         <section>
             <h1>Сучасна пекарня</h1>
         </section>
-        <section>
+        <section id="traditions-section">
             <ul>
                 <li>Великий попит на ринку</li>
                 <li>Доступні за бюджетом формати</li>
@@ -43,51 +45,55 @@
             </p>
             <img src="./images/baker-man.jpg" alt="Чоловік пекар дивиться на батони із посмішкою">
         </section>
-        <h2>Наші найкращі шеф-кухарі</h2>
-        <ul>
-            <li>
-                <article>
-                    <h3>Настя</h3>
-                    <p>Привіт, я Настя!</p>
-                    <p>Вже 18 років, я втілюю у життя цікаві та смачні ідеї.</p>
-                    <p>Я випічу для вас найсмачніші
-                        вироби!</p>
-                </article>
-            </li>
-            <li>
-                <article>
-                    <h3>Влад</h3>
-                    <p>Привіт, я Влад!</p>
-                    <p>Мій кондитерскьий стаж вже 18 років. SHOP BAKERY - це наша любов, якою ми ділимось кожен
-                        раз з Вами через нашу випічку.</p>
-                    <p>Я зроблю для вас унікальну начинку на будь-який смак!</p>
-                </article>
-            </li>
-        </ul>
-        <section>
+        <section id="chefs-section">
+            <h2>Наші найкращі шеф-кухарі</h2>
+            <ul>
+                <li>
+                    <article>
+                        <h3>Настя</h3>
+                        <p>Привіт, я Настя!</p>
+                        <p>Вже 18 років, я втілюю у життя цікаві та смачні ідеї.</p>
+                        <p>Я випічу для вас найсмачніші
+                            вироби!</p>
+                    </article>
+                </li>
+                <li>
+                    <article>
+                        <h3>Влад</h3>
+                        <p>Привіт, я Влад!</p>
+                        <p>Мій кондитерскьий стаж вже 18 років. SHOP BAKERY - це наша любов, якою ми ділимось кожен
+                            раз з Вами через нашу випічку.</p>
+                        <p>Я зроблю для вас унікальну начинку на будь-який смак!</p>
+                    </article>
+                </li>
+            </ul>
         </section>
-        <h2>Формати</h2>
-        <ul>
-            <li>
-                <article>
-                    <h3 lang="en">Malrus</h3>
-                </article>
-            </li>
-            <li>
-                <article>
-                    <h3 lang="en">Horseshoe</h3>
-                </article>
-            </li>
-            <li>
-                <article>
-                    <h3 lang="en">Handlebar</h3>
-                </article>
-            </li>
-        </ul>
-        <section>
+        <section id="formats-section">
+            <h2>Формати</h2>
+            <ul>
+                <li>
+                    <article>
+                        <h3 lang="en">Malrus</h3>
+                    </article>
+                </li>
+                <li>
+                    <article>
+                        <h3 lang="en">Horseshoe</h3>
+                    </article>
+                </li>
+                <li>
+                    <article>
+                        <h3 lang="en">Handlebar</h3>
+                    </article>
+                </li>
+            </ul>
         </section>
-        <section>
+        <section id="contact-section">
             <h2>Приєднуйся до мережі пекарень</h2>
+            <iframe
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2540.163871257662!2d30.488658576449886!3d50.45667308691582!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40d4ce637bfe1717%3A0x5370c2254ad1b952!2z0LLRg9C70LjRhtGPINCh0ZbRh9C-0LLQuNGFINCh0YLRgNGW0LvRjNGG0ZbQsiwgNTQsINCa0LjRl9CyLCAwMjAwMA!5e0!3m2!1suk!2sua!4v1702642080112!5m2!1suk!2sua"
+                width="603" height="595" allowfullscreen="" loading="lazy"
+                referrerpolicy="no-referrer-when-downgrade"></iframe>
         </section>
     </main>
     <footer>
@@ -95,8 +101,8 @@
             <a href="#"><img src="./images/logo.svg" alt="Логотип сучасної пекарні">
             </a>
             <ul>
-                <li><a href="#">Франшиза</a></li>
                 <li><a href="#">Наші традиції</a></li>
+                <li><a href="#">Шеф-кухарі</a></li>
                 <li><a href="#">Формати</a></li>
                 <li><a href="#">Контакти</a></li>
             </ul>
@@ -116,7 +122,7 @@
                     </a></li>
             </ul>
             <a href="#" target="_blank">Політика конфіденційності</a>
-            <p>© 2022 Дані захищені</p>
+            <p>&copy; 2022 Дані захищені</p>
         </address>
     </footer>
 </body>
